rnsc/test_data/rns_integration/error/parser/method_directive/access_flags/interface.rns
.class MethodWithInterfaceFlag
.super java/lang/Object

.method interface main ()V
.method_end
.class_end
